# G-Swap

./: README.md  demo_swapv1.py  demo_swapv2.py  requirements.txt
sample/CNN/: model.py
sample/SwapNN/: model.py
swapv1/: clean.sh  demo.py  error.txt  files.txt  out.txt  run.sh  setup.py  swap.py  swap_cuda_kernel.cu  swap_kernel.cpp
swapv2/: CMakeLists.txt  clean.sh  main.txt  setup.py  swap.cpp  swap_kernal.cu  swapv2c.py
swapv2/include/: utils.h
